Phase2/project
athira@INTVMLT2342:/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/build$
 make
Consolidate compiler generated dependencies of target server
[ 33%] Built target server
Consolidate compiler generated dependencies of target client
[ 66%] Built target client
Consolidate compiler generated dependencies of target test_system_stats
[ 83%] Building CXX object CMakeFiles/test_system_stats.dir/test/test_system_stats.cpp.o
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp:99:5: error: redefinition of ‘int main(int, char**)’
   99 | int main(int argc, char **argv) {
      |     ^~~~
In file included from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp:11:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/../source/server.cpp:141:5: note: ‘int main(int, char**)’ previously defined here
  141 | int main(int argc, char* argv[])
      |     ^~~~
make[2]: *** [CMakeFiles/test_system_stats.dir/build.make:76: CMakeFiles/test_system_stats.dir/test/test_system_stats.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/test_system_stats.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
